Add maintainer tag.

--- a/math.tex
+++ b/math.tex
@@ -1,5 +1,7 @@
-% bf series
-\def\bfA{\mathbf{A}}
+%% Math macros for LaTex Projects 
+%% Maintainer: Aaron Mishkin <amishkin@cs.ubc.ca>
+%% Original Source: Mark Schmidt (UBC CS), Ben Bloem-Reddy (UBC Stats).
+
 \def\bfB{\mathbf{B}}
 \def\bfC{\mathbf{C}}
 \def\bfD{\mathbf{D}}
