Add equdist and fix ceiling command.

--- a/math.tex
+++ b/math.tex
@@ -99,10 +99,13 @@
 
 % almost surely equal:
 \def\equas{\stackrel{\text{\rm\tiny a.s.}}{=}}
+% equal in distribution:
+\def\equdist{\stackrel{\text{\rm\tiny dist}}{=}}
 % independent
 \newcommand{\ind}[0]{\perp \!\!\! \perp }
 
-\DeclarePairedDelimiter{\ceilpair}{\lceil}{\rceil}
+% ceiling and floor
+\DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
 \newcommand{\argdot}{{\,\vcenter{\hbox{\tiny$\bullet$}}\,}} %generic argument dot
 
