New paragraph and plotting macros.

--- a/math.tex
+++ b/math.tex
@@ -1,5 +1,5 @@
 %% Math macros for LaTex Projects 
-%% Maintainer: Aaron Mishkin <amishkin@cs.ubc.ca>
+%% Maintainer: Aaron Mishkin <amishkin@cs.stanford.edu>
 %% Original Source: Mark Schmidt (UBC CS), Ben Bloem-Reddy (UBC Stats).
 
 %% Easy bold-face 
