Add missing proposition environment.

--- a/math.tex
+++ b/math.tex
@@ -92,6 +92,7 @@
 \usepackage{amsthm}
 \usepackage{thmtools, thm-restate}
 \declaretheorem{theorem}
+\declaretheorem{proposition}
 \declaretheorem{lemma}
 \declaretheorem{definition}
 \declaretheorem{corollary}
