Add assumption theorem environment.

--- a/math.tex
+++ b/math.tex
@@ -95,6 +95,7 @@
 \declaretheorem{proposition}
 \declaretheorem{lemma}
 \declaretheorem{definition}
+\declaretheorem{assumption}
 \declaretheorem{corollary}
 \declaretheorem{example}
 
