Add remark environment.

--- a/math.tex
+++ b/math.tex
@@ -93,6 +93,7 @@
 \usepackage{thmtools, thm-restate}
 \declaretheorem{theorem}
 \declaretheorem{proposition}
+\declaretheorem{remark}
 \declaretheorem{lemma}
 \declaretheorem{definition}
 \declaretheorem{assumption}
