--- a/math.tex
+++ b/math.tex
@@ -156,6 +156,7 @@
 \newcommand{\inv}[1]{\frac{1}{#1}}
 \newcommand{\halved}[1]{\frac{#1}{2}}
 \newcommand{\R}{\mathbb{R}}
+\newcommand{\eR}{\bar{\mathbb{R}}}
 
 \newcommand{\into}{\rightarrow}
 
