--- a/math.tex
+++ b/math.tex
@@ -187,6 +187,7 @@
 
 \newcommand{\x}{x}
 \newcommand{\xk}{x_k}
+\newcommand{\xkplus}{x_k^+}
 \newcommand{\xkk}{x_{k+1}}
 \newcommand{\xopt}{x^*}
 \newcommand{\xbar}{\xbar{w}}
