Add some new commands for math.

--- a/math.tex
+++ b/math.tex
@@ -161,6 +161,16 @@
 
 \newcommand{\into}{\rightarrow}
 
+% Linear Algebra
+\newcommand{\vspan}{\text{Span}}
+\newcommand{\row}{\text{Row}}
+\newcommand{\col}{\text{Col}}
+\newcommand{\null}{\text{Null}}
+\newcommand{\dim}{\text{Dim}}
+
+% Functions
+\newcommand{\dom}{\text{Dom}}
+
 % Gradient Descent Symbols
 \newcommand{\oracle}{\mbox{\( \calO \)}}
 \newcommand{\iter}{k}
