Fix repeated commands.

--- a/math.tex
+++ b/math.tex
@@ -165,8 +165,8 @@
 \newcommand{\vspan}{\text{Span}}
 \newcommand{\row}{\text{Row}}
 \newcommand{\col}{\text{Col}}
-\newcommand{\null}{\text{Null}}
-\newcommand{\dim}{\text{Dim}}
+\newcommand{\Null}{\text{Null}}
+\newcommand{\Dim}{\text{Dim}}
 
 % Functions
 \newcommand{\dom}{\text{Dom}}
